# Hackathon-20260314

backend/: Cargo.toml  main.rs  nurse_calls.db
backend/src/: main.rs
frontend/: package-lock.json
frontend/client/: package-lock.json  package.json
frontend/client/src/: App.tsx
