[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.4", features = ["cors"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
chrono = { version = "0.4", features = ["serde"] }